plugins {
	id 'org.springframework.boot' version '2.3.1.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'com.black.swan'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core:6.2.4'
	implementation 'org.modelmapper:modelmapper:2.3.8'
	implementation 'org.postgresql:postgresql'
	implementation 'org.testcontainers:postgresql:1.14.3'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.11.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.0'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}
compileJava {
	options.compilerArgs += ["--enable-preview"]
}

test {
	useJUnitPlatform()
	jvmArgs(['--enable-preview'])
}


tasks.withType(JavaCompile) {
	options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}